--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -5,7 +5,10 @@
 .portfolio-section-photos h2 {
   color: #242424;
   margin-bottom: 80px;
+  text-align: center;
 }
+
+
 
 .grid-paysages {
   display: grid;
@@ -53,12 +56,28 @@
 
 @media screen and (max-width: 996px) {
   .grid-paysages {
-    grid-template-columns: 1fr;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
     gap: 15px;
   }
 
+  .grid-paysages img {
+    width: calc(100% / 3 - 10px);
+    height: auto;
+  }
+
   .grid-portraits {
-    grid-template-columns: 1fr;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
     gap: 15px;
+  }
+
+  .grid-portraits img {
+    width: calc(100% / 3 - 10px);
+    height: auto;
   }
 }
